# kinc-rs

./: .gitmodules  Cargo.toml  README.md  build.rs  kinc.h
.github/workflows/: main.yml
example/: Cargo.toml
example/src/: main.rs
examples/shader/: Cargo.toml  kfile.js  main.rs
examples/shader/Shaders/: shader.frag.glsl
examples/shader/src/: lib.rs  main.rs
kinc/: Cargo.toml  build.rs  kinc.h
kinc/src/: g4.rs  lib.rs  sys.rs
krafix/: Cargo.toml  build.rs
krafix/src/: lib.rs
src/: g4.rs  lib.rs  sys.rs
