[package]
name = "krafix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# heck = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }

[build-dependencies]
cc = { version ="1.0.73", features = ["parallel"] }

[lib]
proc-macro = true
