[package]
name = "shader"
version = "0.1.0"
edition = "2021"

# Work around some warning on Windows about colliding pdb files
[[bin]]
name = "shader-bin"
path = "src/main.rs"

[lib]
crate-type = ["lib", "staticlib","cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kinc = {path = "../../kinc"}
krafix = {path = "../../krafix"}